Added download option

--- a/index.html
+++ b/index.html
@@ -263,6 +263,24 @@
         </div>
         <figcaption class="safety-text">FLANGES</figcaption>
     </div>
+
+
+
+
+
+
+        <div class="dwnld_bt">
+
+            <img class="prof1" src="IMAGES/Profile_1.jpg"/>
+            <h1 class="dwnldtxt">DOWNLOAD PROFILE</h1>
+      <a class="dwnd-button" href="download/Company-Profile.pdf" download="Company-Profile"><img
+          src="images/ICON/Download.png"></a>
+
+          <img class="prof2" src="IMAGES/Profile_2.png"/>
+</div>
+
+
+
         </body>
     <script src="scripts.js"></script>
 </html>
